ADD: color variable in sass

--- a/src/styles/scss/components/_color.scss
+++ b/src/styles/scss/components/_color.scss
@@ -1,3 +1,12 @@
 $content: #2f80ed;
 $container: #ffffff;
 $button-in: #ebecf4a6;
+$border-inp: #dfe2ef;
+$link: #c2c7dd;
+$button-h: rgb(250, 250, 250);
+$icon-1: #2f80ed;
+$label-c: #cccccc;
+$input-c: #83cc5e;
+$label-1: #418bee;
+$label-2: #9598a6;
+$label: #818287;
