--- a/src/styles/scss/components/_input.scss
+++ b/src/styles/scss/components/_input.scss
@@ -21,7 +21,7 @@ input:not(:focus):valid ~ .container__floating--label {
   left: 1.2em;
   font-size: 0.8em;
   opacity: 1;
-  color: #cccccc;
+  color: $label-c;
 }
 
 input:focus ~ .container__floating--label1,
@@ -31,7 +31,7 @@ input:not(:focus):valid ~ .container__floating--label1 {
   left: 10.5em;
   font-size: 10px;
   opacity: 1;
-  color: #cccccc;
+  color: $label-c;
 }
 
 input[type='checkbox'] {
@@ -48,7 +48,7 @@ input[type='checkbox'] {
 
 input[type='checkbox']:after {
   content: ' ';
-  background-color: #83cc5e;
+  background-color: $input-c;
   display: inline-block;
   visibility: visible;
 }
@@ -56,7 +56,18 @@ input[type='checkbox']:after {
 input[type='checkbox']:checked:after {
   width: 20px;
   height: 20px;
-  color: white;
+  color: $container;
   font-size: 1em;
   content: '\2714';
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='blue' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 90%;
+  background-position-y: 10px;
+  border-radius: 4px;
 }
