--- a/src/styles/scss/components/_input.scss
+++ b/src/styles/scss/components/_input.scss
@@ -1,4 +1,5 @@
 input[type='date']:required:invalid::-webkit-datetime-edit {
+  width: 28%;
   color: transparent;
 }
 
@@ -59,6 +60,26 @@ input[type='checkbox']:checked:after {
   color: $container;
   font-size: 1em;
   content: '\2714';
+}
+
+input[type='radio'] {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  outline: none;
+}
+
+input[type='radio']:before {
+  content: '';
+  display: block;
+  width: 60%;
+  height: 60%;
+  margin: 20% auto;
+  border-radius: 50%;
+}
+input[type='radio']:checked:before {
+  background: #83cc5e;
 }
 
 select {
