ADD: getUser by axios and styles in ContainerRegisterForm

--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -100,6 +100,16 @@ body {
     font-size: 1.5em;
     color: $label-1;
   }
+  .container__label--4 {
+    font-weight: 400;
+    font-size: 0.8em;
+    color: $label-1;
+  }
+
+  .container__label--5 {
+    font-weight: 400;
+    font-size: 0.8em;
+  }
   .container_lab {
     margin-bottom: 12px;
   }
