--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -109,7 +109,9 @@ body {
   .container__label--5 {
     font-weight: 400;
     font-size: 0.8em;
+    color: $label;
   }
+
   .container_lab {
     margin-bottom: 12px;
   }
