--- a/src/styles/scss/components/_form.scss
+++ b/src/styles/scss/components/_form.scss
@@ -316,6 +316,28 @@
     left: -17px;
   }
 
+  .container__button--4 {
+    cursor: pointer;
+    border: 0;
+    margin-top: 8%;
+    border-color: $content;
+    padding: 15px;
+    margin-bottom: 5px;
+    border-radius: 8px;
+    height: 56px;
+    width: 38%;
+    margin-left: 25em;
+    background-color: $content;
+    color: $container;
+    label {
+      font-size: 15px;
+    }
+    &:hover {
+      background-color: $icon-1;
+      color: $button-h;
+    }
+  }
+
   .container__i {
     width: 120px;
     position: absolute;
